qc pass: interop8: isis text authentication
qc pass: interop9: isis lsp text authentication
qc pass: isis text authentication
qc pass: isis lsp text authentication
qc pass: isis md5 authentication
qc pass: isis lsp md5 authentication
---------------------------------- 2021-12-03 12:35:57
no qc pass: interop2: isis lsp text authentication
no qc pass: interop2: isis text authentication
qc pass: interop2: isis md5 authentication
qc pass: interop2: isis lsp md5 authentication
qc pass: interop9: isis lsp md5 authentication
qc pass: interop9: isis text authentication
qc pass: interop9: isis md5 authentication
---------------------------------- 2021-12-03 13:33:35
qc pass: interop8: isis lsp text authentication
qc pass: interop8: isis lsp md5 authentication
qc pass: interop8: isis text authentication
qc pass: interop8: isis md5 authentication
qc pass: interop9: ospf text authentication
qc pass: interop9: ospf md5 authentication
---------------------------------- 2021-12-03 16:29:47
qc pass: hdlc
---------------------------------- 2021-12-03 17:29:16
qc pass: fragmentation and reassembly
qc pass: no fragmentation nor reassembly
---------------------------------- 2021-12-05 06:37:53
qc pass: interop1: fragmentation and reassembly
qc pass: interop2: fragmentation and reassembly
qc pass: interop8: fragmentation and reassembly
qc pass: interop9: fragmentation and reassembly
---------------------------------- 2021-12-05 07:02:17
no qc pass: olab bgp ingress route filtering with routemap
no qc pass: labels bgp ingress route filtering with routemap
no qc pass: interop8: isis text authentication
qc pass: precise mtu enforcement
---------------------------------- 2021-12-05 08:55:38
no todo: shame texts in cmd.err
---------------------------------- 2021-12-06 09:25:02
qc pass: p4lang: replay window with openvpn
qc pass: p4lang: replay window with wireguard
---------------------------------- 2021-12-07 07:42:31
qc pass: lsrp dynamic metric
qc pass: pvrp dynamic metric