@@ -2264,7 +2264,10 @@ qc pass: lsrp no authentication
 qc pass: lsrp database authentication
 qc pass: lsrp with strict bfd
 qc pass: lsrp with polka
-qc pass: lsrp dynamic metric
+qc pass: lsrp dynamic inband metric
+qc pass: lsrp dynamic icmp metric
+qc pass: lsrp dynamic udp metric
+qc pass: lsrp dynamic twamp metric
 qc pass: multicast routing with static flooding
 qc pass: multicast routing with pim ssm
 qc pass: multicast routing with igmp/mld
@@ -2412,7 +2415,10 @@ qc pass: pvrp peer metric
 qc pass: pvrp ecmp connection
 qc pass: pvrp no authentication
 qc pass: pvrp with strict bfd
-qc pass: pvrp dynamic metric
+qc pass: pvrp dynamic inband metric
+qc pass: pvrp dynamic icmp metric
+qc pass: pvrp dynamic udp metric
+qc pass: pvrp dynamic twamp metric
 qc pass: redistribution with isis
 qc pass: redistribution with ospf
 qc pass: redistribution with rip
