@@ -11,7 +11,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v21.12.8-cur, done by cs@nop.<br/>
-tested: 2021-12-08 12:10:22, took 00:06:40, with 100 workers, on 2504 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2021-12-08 16:46:40, took 00:06:31, with 100 workers, on 2510 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -2281,7 +2281,10 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-lsrp41.tst">rout-lsrp41.tst</a></td><td>success</td><td>lsrp database authentication</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-lsrp42.tst">rout-lsrp42.tst</a></td><td>success</td><td>lsrp with strict bfd</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-lsrp43.tst">rout-lsrp43.tst</a></td><td>success</td><td>lsrp with polka</td></tr>
-<tr><td><a href="http://sources.nop.hu/cfg/rout-lsrp44.tst">rout-lsrp44.tst</a></td><td>success</td><td>lsrp dynamic metric</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-lsrp44.tst">rout-lsrp44.tst</a></td><td>success</td><td>lsrp dynamic inband metric</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-lsrp45.tst">rout-lsrp45.tst</a></td><td>success</td><td>lsrp dynamic icmp metric</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-lsrp46.tst">rout-lsrp46.tst</a></td><td>success</td><td>lsrp dynamic udp metric</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-lsrp47.tst">rout-lsrp47.tst</a></td><td>success</td><td>lsrp dynamic twamp metric</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-mcast01.tst">rout-mcast01.tst</a></td><td>success</td><td>multicast routing with static flooding</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-mcast02.tst">rout-mcast02.tst</a></td><td>success</td><td>multicast routing with pim ssm</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-mcast03.tst">rout-mcast03.tst</a></td><td>success</td><td>multicast routing with igmp/mld</td></tr>
@@ -2429,7 +2432,10 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-pvrp41.tst">rout-pvrp41.tst</a></td><td>success</td><td>pvrp ecmp connection</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-pvrp42.tst">rout-pvrp42.tst</a></td><td>success</td><td>pvrp no authentication</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-pvrp43.tst">rout-pvrp43.tst</a></td><td>success</td><td>pvrp with strict bfd</td></tr>
-<tr><td><a href="http://sources.nop.hu/cfg/rout-pvrp44.tst">rout-pvrp44.tst</a></td><td>success</td><td>pvrp dynamic metric</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-pvrp44.tst">rout-pvrp44.tst</a></td><td>success</td><td>pvrp dynamic inband metric</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-pvrp45.tst">rout-pvrp45.tst</a></td><td>success</td><td>pvrp dynamic icmp metric</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-pvrp46.tst">rout-pvrp46.tst</a></td><td>success</td><td>pvrp dynamic udp metric</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-pvrp47.tst">rout-pvrp47.tst</a></td><td>success</td><td>pvrp dynamic twamp metric</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-redist01.tst">rout-redist01.tst</a></td><td>success</td><td>redistribution with isis</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-redist02.tst">rout-redist02.tst</a></td><td>success</td><td>redistribution with ospf</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-redist03.tst">rout-redist03.tst</a></td><td>success</td><td>redistribution with rip</td></tr>
